# s-bot-ify

./: .devcontainer.json  .dockerignore  Dockerfile.dev  docker-compose.yml
backend/: .gitignore  pyproject.toml
backend/backend/: main.py
backend/backend/chatbot/: chatbot.py  spotify_api.py
backend/backend/chatbot/confirmation/: confirmation_classifier.py  negatives.csv  positives.csv
backend/backend/chatbot/playlist/: playlist_dataset.csv  playlist_handler.py
backend/backend/chatbot/search/: search_dataset.csv  search_handler.py
backend/backend/chatbot/smalltalk/: smalltalk_dataset.csv  smalltalk_handler.py
backend/backend/chatbot/utils/: aggregate.py  check_nltk_data.py  corpus_processor.py  errors.py  find_max_similarity.py
backend/backend/chatbot/utils/protocols/: handler.py
backend/backend/dtos/: artist.py  chat.py  image.py  paginated.py  playlist.py  spotify_token.py  spotify_user.py  track.py  user.py
backend/backend/entities/: base_entity.py  playlist.py  user.py
backend/backend/repositories/: base_repository.py  playlist_repository.py
backend/backend/repositories/playlist/: __init__.py  beanie_playlist_repository.py
backend/backend/repositories/spotify/: playlist_repository.py  token_repository.py  track_repository.py  user_repository.py
backend/backend/repositories/user/: __init__.py  beanie_user_repository.py
backend/backend/routes/: chat.py  playlist.py  spotify_auth.py  user_info.py
backend/backend/use_cases/: __init__.py  base_use_case.py
backend/backend/use_cases/playlist/: add_tracks_to_playlist.py  create_playlist.py  get_chat_messages_of_playlist.py  get_playlist.py  get_spotify_playlist.py  get_spotify_playlists.py  get_spotify_playlists_of_user.py  get_spotify_tracks_of_playlist.py  save_chat_state_of_playlist.py  send_message.py
backend/backend/use_cases/search/: search_tracks_use_case.py
backend/backend/use_cases/user/: get_spotify_user_use_case.py  update_access_token_use_case.py
backend/backend/utils/: aiohttp_session.py  chatbot_use_cases.py  db.py  env.py  fast_api_users_spotify.py  router.py  spotify.py
frontend/: .gitignore  Dockerfile.dev  bun.lockb  bunfig.toml  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
frontend/src/: app.d.ts  app.postcss
frontend/src/routes/: +layout.svelte  +page.ts
(+30 files in other folders)
